force-app/main/default/objects/PS_Log_Setting__mdt/PS_Log_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Threshholds, flags, and other config for Persistable Structured (PS) Logs. Code looks for developer name = PS_Log_Settings</description>
    <label>PS Log Setting</label>
    <pluralLabel>PS Log Settings</pluralLabel>
</CustomObject>