force-app/main/default/objects/PS_Log_Setting__mdt/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <description>CMSI-2 Flag check for Apex Transactions</description>
    <defaultValue>false</defaultValue>
    <label>Apex</label>
    <type>Checkbox</type>
</CustomField>