force-app/main/default/objects/PS_Log_Setting__mdt/fields/Batchable__c.field-meta.xml
<CustomField>
    <fullName>Batchable__c</fullName>
        <description>CMSI-2 Flag check for Batchable Transactions</description>
    <defaultValue>false</defaultValue>
    <label>Batchable</label>
    <type>Checkbox</type>
</CustomField>