force-app/main/default/objects/PS_Log_Setting__mdt/fields/Cpu_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Cpu_Time_Threshold__c</fullName>
    <description>CMSI-2 Define cpu time threshold limit.</description>
    <label>Cpu Time Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>