force-app/main/default/objects/PS_Log_Setting__mdt/fields/Disable_All_Log_Persistence__c.field-meta.xml
<CustomField>
    <fullName>Disable_All_Log_Persistence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stops all publishing/persisting of all PS Logs, no matter the user-level configuration</description>
    <inlineHelpText>Stops all publishing/persisting of all PS Logs, no matter the user-level configuration</inlineHelpText>
    <label>Disable All Log Persistence</label>
    <type>Checkbox</type>
</CustomField>