force-app/main/default/objects/PS_Log_Setting__mdt/fields/Disable_Slow_Query_Publish__c.field-meta.xml
<CustomField>
    <fullName>Disable_Slow_Query_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stops all publishing/persisting of slow queries, no matter how slow</description>
    <inlineHelpText>Stops all publishing/persisting of slow queries, no matter how slow</inlineHelpText>
    <label>Disable Slow Query Publish</label>
    <type>Checkbox</type>
</CustomField>