force-app/main/default/objects/PS_Log_Setting__mdt/fields/Heap_Size_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Heap_Size_Threshold__c</fullName>
    <description>CMSI-2 Define heap size threshold limit.</description>
    <label>Heap Size Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>