force-app/main/default/objects/PS_Log_Setting__mdt/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
        <description>CMSI-2 Flag check for Interface Transactions</description>
    <defaultValue>false</defaultValue>
    <label>Interface</label>
    <type>Checkbox</type>
</CustomField>