force-app/main/default/objects/PS_Log_Setting__mdt/fields/Interface_Class__c.field-meta.xml
<CustomField>
    <fullName>Interface_Class__c</fullName>
    <description>You can change run the time interface implementation class</description>
    <inlineHelpText>You can define the run-time interface implementation class by using the field</inlineHelpText>
    <label>Interface Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>