force-app/main/default/objects/PS_Log_Setting__mdt/fields/Limits_Check_Interval__c.field-meta.xml
<CustomField>
    <fullName>Limits_Check_Interval__c</fullName>
    <description>CMSI-2 time interval in miliseconds after which org limits should be checked</description>
    <label>Limits Check Interval</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>