force-app/main/default/objects/PS_Log_Setting__mdt/fields/Line_Count_Cap__c.field-meta.xml
<CustomField>
    <fullName>Line_Count_Cap__c</fullName>
    <description>Log lines added after this many will be discarded to conserve heap, min/max = 0/99999</description>
    <inlineHelpText>Log lines added after this many will be discarded to conserve heap, min/max = 0/99999</inlineHelpText>
    <label>Line Count Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>