force-app/main/default/objects/PS_Log_Setting__mdt/fields/Line_Length_Cap__c.field-meta.xml
<CustomField>
    <fullName>Line_Length_Cap__c</fullName>
    <description>Log lines longer than this will be truncated to conserve heap, min/max = 0/9999</description>
    <inlineHelpText>Log lines longer than this will be truncated to conserve heap, min/max = 0/9999</inlineHelpText>
    <label>Line Length Cap</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>