force-app/main/default/objects/PS_Log_Setting__mdt/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>CMSI-2 Specified Log Level for a Transaction</description>
    <label>Log Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fine</fullName>
                <default>true</default>
                <label>Fine</label>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>