force-app/main/default/objects/PS_Log_Setting__mdt/fields/Publish_Percent_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Publish_Percent_Threshold__c</fullName>
    <description>Percentage of hourly publishes where PS Logs stop publishing, min/max = 0/90</description>
    <inlineHelpText>Percentage of hourly publishes where PS Logs stop publishing, min/max = 0/90</inlineHelpText>
    <label>Publish Percent Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>