force-app/main/default/objects/PS_Log_Setting__mdt/fields/Queueable__c.field-meta.xml
<CustomField>
    <fullName>Queueable__c</fullName>
    <description>CMSI-2 Flag check for Queueable Transactions</description>
    <defaultValue>false</defaultValue>
    <label>Queueable</label>
    <type>Checkbox</type>
</CustomField>