force-app/main/default/objects/PS_Log_Setting__mdt/fields/Slow_Query_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Slow_Query_Threshold__c</fullName>
    <description>Queries longer than this number of seconds will be logged as performance hogs, min/max = 0.5/10</description>
    <inlineHelpText>Queries longer than this number of seconds will be logged as performance hogs, min/max = 0.5/10</inlineHelpText>
    <label>Slow Query Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>