force-app/main/default/objects/PS_Log_Setting__mdt/fields/Slow_Transaction_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Slow_Transaction_Threshold__c</fullName>
    <description>Transactions longer than this number of seconds will be logged as performance hogs, min/max = 2.5/15</description>
    <inlineHelpText>Transactions longer than this number of seconds will be logged as performance hogs, min/max = 2.5/15</inlineHelpText>
    <label>Slow Transaction Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>